youfull/objects/NRT_Log__c.object
<CustomObject>
    <fields>
        <fullName>Application_Class__c</fullName>
        <label>Application/Class</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Debug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NRT Log</label>
    <nameField>
        <label>NRT Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NRT Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>